# C-Lora

./: .gitignore  CMakeLists.txt  README.md  inverLora.cpp  inverLora.h  test.c
.cache/clangd/index/: inverLora.cpp.BDDE4EA0EE4F6FD4.idx  inverLora.h.222977ECCB66B8CB.idx
Test/: CMakeLists.txt  test.c
src/: CMakeLists.txt  Loralib.cpp  Loralib.h
